2006-03-06  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixDriveInfo.cs: Remove requirement that mountPoints be avaible via
	  getfsfile(3).  This isn't always the case -- in particular drives mounted
	  via HAL and other mechanisms won't be listed in /etc/fstab, and thus won't
	  be returned via getfsfile(3).  If getfsfile(3) fails, then we "guess" on
	  the drive format and volume label.
	* UnixStream.cs: RefreshStat() should assert that the instance hasn't been
	  disposed.
	* UnixEnvironment.cs (GetConfigurationValue, GetConfigurationString): Fix
	  error checking.

2006-02-23  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Create() should return a UnixFileInfo if the file
	  doesn't exist.  This allows callers to use UnixFileInfo.Exists to see if
	  the file exists, and behaves more rationally e.g. if the directory
	  contents changes while calling UnixDirectoryInfo.GetFileSystemEntries(),
	  we'll get a UnixFileInfo entry that doesn't exist instead of an exception
	  terminating the entire array creation.
	* UnixSymbolicLinkInfo.cs: [Obsolete] the Contents property -- this property
	  *always* creates a new object if HasContents=true, and since a
	  UnixFileSystemInfo instance is (104+2*(sizeof(void*))+1) bytes (~113 bytes
	  on 32-bit platforms), we don't want to create these frequently.  Add a
	  GetContents() method as the replacement, to make it (slightly) more
	  explicit that information won't be cached (and thus should be cached by
	  the caller, if appropriate).  GetContents() throws an exception if
	  HasContents=false instead of returning null; this change brings the
	  implementation in line with the documentation.

2006-02-18  Alp Toker  <alp@atoker.com>

	* UnixEndPoint.cs: Avoid truncation of last two bytes of SocketAddress
	string

2006-01-26  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixMarshal.cs: Check for null arguments in PtrToString() and
	  PtrToStringArray().

2006-01-24  Jonathan Pryor  <jonpryor@vt.edu>
